style: overflow fix

--- a/web/styles/globals.css
+++ b/web/styles/globals.css
@@ -9,4 +9,6 @@
 body {
   background-color: #121212;
   color: #fff;
+  width: 100vh;
+  overflow-x: hidden;
 }
